--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
 </div>
 
     <p>© Copyright 2020 TinDog</p>
-    <p>Website Developed by Peter Baraniecki</p>
-    <p><a href="https://www.peterbaraniecki.com">www.peterbaraniecki.com</a></p>
+    <p>Website Developed by Building Commerce Company</p>
+    <p><a href="https://www.peterbaraniecki.com">www.buildingcommerce.co</a></p>
 
   </footer>
 
